# PermaplanT

./: +  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  :w  Dockerfile  LICENSE  Makefile  README.md  RELATED_APPS.md  REMOTE.md  TODO.md  book.toml  package-lock.json  package.json  pr.py
backend/: .env  .env.sample  .gitignore  .sqlfluff  Cargo.toml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  deny.toml  diesel.toml  typeshare.toml  wow
backend/lib-db/: Cargo.toml
backend/lib-db/src/: lib.rs  schema.rs
backend/load-testing/: README.md
backend/load-testing/src/: get-users.js
backend/migrations/: before_squash_schema.sql
backend/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
backend/migrations/2023-01-20-024832_create_enums/: down.sql  up.sql
backend/migrations/2023-01-21-024653_create_enums/: down.sql  up.sql
backend/migrations/2023-01-21-024832_create_varieties/: down.sql  up.sql
backend/migrations/2023-01-21-024920_create_seeds/: down.sql  up.sql
backend/migrations/2023-02-04-112822_create_plants/: down.sql  up.sql
backend/migrations/2023-02-04-132532_create_plant_detail/: down.sql  up.sql
backend/migrations/2023-02-10-123415_rename_varieties/: down.sql  up.sql
backend/migrations/2023-02-20-112009_alter_plant_detail/: down.sql  up.sql
backend/migrations/2023-02-20-213219_create_plants_metatables/: down.sql  up.sql
backend/migrations/2023-02-27-140848_enum_license/: down.sql  up.sql
backend/migrations/2023-03-03-105611_remove_tags/: down.sql  up.sql
backend/migrations/2023-03-03-140707_convert_variety_to_text/: down.sql  up.sql
backend/migrations/2023-03-09-173153_make_plant_id_optional/: down.sql  up.sql
backend/migrations/2023-03-09-194135_plant_relations/: down.sql  up.sql
backend/migrations/2023-03-14-153713_enable_postgis/: down.sql  up.sql
backend/migrations/2023-03-21-120302_create_map/: down.sql  up.sql
backend/migrations/2023-03-28-131229_seed_maps/: down.sql  up.sql
backend/migrations/2023-03-29-111855_merge_plant_tables/: down.sql  up.sql
backend/migrations/2023-04-04-174838_create_plants/: down.sql  up.sql
backend/migrations/2023-04-04-190227_create_seeds/: down.sql  up.sql
backend/migrations/2023-04-12-131757_alter_plants_table/: down.sql  up.sql
backend/migrations/2023-04-12-162600_rename_plants_columns/: down.sql  up.sql
backend/migrations/2023-04-12-162709_replace_varchars/: down.sql  up.sql
backend/migrations/2023-04-12-162832_alter_plant_types/: down.sql  up.sql
backend/migrations/2023-04-13-102425_new_plants_columns/: down.sql  up.sql
backend/migrations/2023-04-14-113044_new_plants_reinsaat_columns/: down.sql  up.sql
backend/migrations/2023-04-20-151000_base_layer/: down.sql  up.sql
backend/migrations/2023-04-26-154153_map_creation/: down.sql  up.sql
backend/migrations/2023-05-05-075334_map_versions/: down.sql  up.sql
backend/migrations/2023-05-05-123527_map_owner/: down.sql  up.sql
backend/migrations/2023-05-22-113625_unique_map_name/: down.sql  up.sql
backend/migrations/2023-05-29-163141_remove_map_versions/: down.sql  up.sql
backend/migrations/2023-05-29-210302_additional_map_properties/: down.sql  up.sql
backend/migrations/2023-06-02-203505_layers_relation_table/: down.sql  up.sql
backend/migrations/2023-06-07-120000_postgis_extension/: down.sql
backend/migrations/2023-06-11-122400_plantings/: down.sql  up.sql
backend/migrations/2023-06-12-110743_map_owner_uuid/: down.sql  up.sql
backend/migrations/2023-06-13-102759_seed_owner/: down.sql  up.sql
backend/migrations/2023-06-20-110200_plants_relations/: down.sql  up.sql
backend/migrations/2023-06-24-125250_planting_timeline_data/: down.sql  up.sql
backend/migrations/2023-07-01-152628_squashed_setup/: down.sql  up.sql
backend/migrations/2023-07-03-164000_add_map_geometry/: down.sql  up.sql
backend/migrations/2023-07-03-165000_heatmap/: down.sql  up.sql
backend/migrations/2023-07-04-190000_base_layer/: down.sql  up.sql
backend/migrations/2023-07-11-095000_map_cascading_deletes/: down.sql  up.sql
backend/migrations/2023-07-12-143111_user_data/: down.sql  up.sql
backend/migrations/2023-07-15-152628_squashed_setup/: down.sql  up.sql
backend/migrations/2023-07-21-085933_gain_blossoms/: down.sql  up.sql
backend/migrations/2023-07-22-110000_shadings/: down.sql  up.sql
backend/migrations/2023-07-25-025551_alternative_layer/: down.sql  up.sql
backend/migrations/2023-08-08-200334_add_missing_shade_layers/: down.sql  up.sql
backend/migrations/2023-09-02-153556_archivable_seeds/: down.sql  up.sql
backend/migrations/2023-09-14-114909_seed_full_name_view/: down.sql  up.sql
backend/migrations/2023-09-20-073850_unique_seeds/: down.sql  up.sql
backend/migrations/2023-10-29-195901_planting_add_seed/: down.sql  up.sql
backend/migrations/2024-01-03-213607_planting_area_of_plants/: down.sql  up.sql
backend/migrations/2024-01-07-202207_planting_cleanup/: down.sql  up.sql
backend/schema_dump/: after_squash_schema.sql  before_squash_schema.sql
backend/src/: constants.rs  error.rs  main.rs  schema.patch  schema.rs  schema_old.rs  server.rs
(+1798 files in other folders)
