[package]
name = "backend"
version = "0.1.0"
description = "The backend of PermaplanT"
repository = "https://github.com/ElektraInitiative/PermaplanT"
license = "BSD 3-Clause"
keywords = ["PermaplanT"]
categories = ["web-programming", "web-programming::http-server"]
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
actix-rt = "2.8.0"
dotenvy = "0.15.0"
typeshare = "1.0.0"
derive_more = "0.99.17"

[dependencies.diesel]
version = "2.0.2"
features = ["postgres", "r2d2", "chrono", "64-column-tables"]

[dependencies.diesel-derive-enum]
version = "2.0.0-rc.0"
features = ["postgres"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.chrono]
version = "0.4.23"
features = ["serde"]
