[package]
name = "backend"
version = "0.1.0"
description = "The backend of PermaplanT"
repository = "https://github.com/ElektraInitiative/PermaplanT"
license = "BSD 3-Clause"
keywords = ["PermaplanT"]
categories = ["web-programming", "web-programming::http-server"]
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }

# Actix
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-utils = "3.0.1"
actix-http = "3.3.1"
actix-service = "2.0.2"

# API doc
utoipa = { version = "3.1.1", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.1.1", features = ["actix-web"] }

# Auth
actix-web-grants = "3.0.1"
actix-web-httpauth = "0.8.0"
reqwest = { version = "0.11.17", features = ["json"] }
jsonwebtoken = "8.3.0"

# Data
diesel = { version = "2.0.2", features = [
    "postgres",
    "chrono",
    "128-column-tables",
] }
diesel-async = { version = "0.2.2", features = ["deadpool", "postgres"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }

# Other
serde_json = "1.0.95"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
dotenvy = "0.15.0"
typeshare = "1.0.0"
derive_more = "0.99.17"
uuid = { version = "1.3.2", features = ["serde", "v4"] }
log = "0.4.17"
env_logger = "0.10.0"


[dev-dependencies]
jsonwebkey = { version = "0.3.5", features = ["generate", "jwt-convert"] }
