[package]
name = "lib-db"
version = "0.3.7"
description = "Database layer of the backend of PermaplanT"
edition = "2021"

[dependencies]
# Data
diesel = { version = "2.0.2", features = [
    "postgres",
    "chrono",
    "64-column-tables",
    "uuid",
] }
diesel-async = { version = "0.4.1", features = ["deadpool", "postgres"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
postgis_diesel = { version = "2.1.0", features = ["serde"] }

# Other
serde_json = "1.0.95"
chrono = { version = "0.4.23", features = [
    "serde",
    "clock",
], default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
dotenvy = "0.15.0"
typeshare = "1.0.0"
derive_more = "0.99.17"
uuid = { version = "1.3.2", features = ["serde", "v4"] }
log = "0.4.17"
env_logger = "0.10.0"
futures = "0.3.28"
futures-util = "0.3.30"
image = { version = "0.24.6", default-features = false, features = ["png"] }

tokio = { version = "1.28.0", features = ["full"] }

# API doc
utoipa = { version = "3.1.1", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "3.1.1", features = ["actix-web"] }
